--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ julia:
 notifications:
   email: false
 after_success:
-  - julia -e 'using Pkg; cd(Pkg.dir(“MyPackage")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())’;
+  - julia -e 'using Pkg; cd(Pkg.dir(“MyTestUD")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())’;
 
 jobs:
   include:
